# cpp_template

./: .gitignore  CMakeLists.txt  CMakePresets.json
